# multicast_streaming_service

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  ProjectConfig.cmake  README.md  build.sh
gui/: client.py  client_fastapi.py  main.py  requirements.txt  sender.py  sender_fastapi.py
gui/styles/: style_client.css  style_sender.css
gui/templates/: dashboard_client.html  dashboard_sender.html
multicast_core/: CMakeLists.txt  multicast_coreConfig.cmake.in
multicast_core/include/: multicast_core.h
multicast_core/include/multicast_core_bits/: receiver.h  sender.h
multicast_core/src/: receiver.cpp  sender.cpp
multicast_core/tests/: CMakeLists.txt
multicast_core/tests/src/: receiver.cpp  sender.cpp  test.cpp
pybindings/: converters.h  multicast_core.cpp  receiver.cpp  sender.cpp
